Make index page templates and view.

--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -23,6 +23,10 @@
     </ul>
   </div>
   <div class="card-list">
-    {% include "recipes/recipe.html" %}
+
+    {% for recipe in page %}
+      {% include "recipes/recipe.html" with recipe=recipe %}
+    {% endfor %}
+
   </div>
 {% endblock %}
