--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -2,29 +2,37 @@
 
 <div class="card" data-id="120">
   <a href="#" class="link" target="_blank">
-    <img src={% static 'images/testCardImg.png' %} alt="Какой-то текст" class="card__image">
+    <img src={{ recipe.image.url }} alt="{{ recipe.title }}" class="card__image">
   </a>
   <div class="card__body">
     <a class="card__title link" href="#" target="_blank">
-      Французские тосты
+      {{ recipe.title }}
     </a>
     <ul class="card__items">
-      <li class="card__item">
-        <span class="badge badge_style_green">Обед</span>
-      </li>
-      <li class="card__item">
-        <span class="badge badge_style_orange">Завтрак</span>
-      </li>
-      <li class="card__item">
-        <span class="badge badge_style_purple">Ужин</span>
-      </li>
+      {% if recipe.is_breakfast %}
+        <li class="card__item">
+          <span class="badge badge_style_green">Завтрак</span>
+        </li>
+      {% endif %}
+      {% if recipe.is_lunch %}
+        <li class="card__item">
+          <span class="badge badge_style_orange">Обед</span>
+        </li>
+      {% endif %}
+      {% if recipe.is_dinner %}
+        <li class="card__item">
+          <span class="badge badge_style_purple">Ужин</span>
+        </li>
+      {% endif %}
     </ul>
     <div class="card__items card__items_column">
       <p class="card__text">
-        <span class="icon-time"></span> 20 мин.</p>
+        <span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
       <p class="card__text">
         <span class="icon-user"></span>
-        <a href="#" style="color: black">Вероника Чернова</a>
+        <a href="#" style="color: black">
+          {{ recipe.author.get_full_name }}
+        </a>
       </p>
     </div>
   </div>
