--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -42,5 +42,10 @@
       <span class="icon-plus button__icon"></span>
       Добавить в покупки
     </button>
+    {% if user.is_authenticated %}
+      <button class="button button_style_none" name="favorites" data-out>
+        <span class="icon-favorite"></span>
+      </button>
+    {% endif %}
   </div>
 </div>
