Makes routes Started makes new recipe functional

--- a/recipes/templates/recipes/favorites.html
+++ b/recipes/templates/recipes/favorites.html
@@ -5,5 +5,5 @@
 {% block title %} Мои подписки {% endblock %}
 
 {% block content %}
-  <p>SHOP LIST HIRE!</p>
+  <p>FAVORITES HIRE!</p>
 {% endblock %}
