--- a/recipes/templates/recipes/follows.html
+++ b/recipes/templates/recipes/follows.html
@@ -5,5 +5,5 @@
 {% block title %} Мои подписки {% endblock %}
 
 {% block content %}
-  <p>SHOP LIST HIRE!</p>
+  <p>FOLLOW CONTENT HIRE!</p>
 {% endblock %}
