--- a/templates/header.html
+++ b/templates/header.html
@@ -27,8 +27,11 @@
       </ul>
       {% if user.is_authenticated %}
         <ul class="nav__items list">
-          <li class="nav__item">
-            <a href={% url 'password_change' %} class="nav__link link">Изменить пароль</a>
+          {% url 'password_change' as url %}
+          <li class="nav__item {% if request.path == url %}nav__item_active{% endif %}">
+            <a href={{ url }} class="nav__link link">
+              Изменить пароль
+            </a>
           </li>
           <li class="nav__item">
             <a href={% url 'logout' %} class="nav__link link">Выход</a>
@@ -37,7 +40,7 @@
       {% else %}
         <ul class="nav__items list">
           <li class="nav__item">
-            <a href={% url 'login' %} class="nav__link link">Войти</a>
+            <a href={% url 'login' %}?next={{ request.path }} class="nav__link link">Войти</a>
           </li>
           <li class="nav__item">
             <a href={% url 'signup' %} class="button button_style_blue">
