--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,12 +1,13 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% block title %}Вы вышли из системы{% endblock %}
 
-</body>
-</html>
+{% block content %}
+
+<main class="main container">
+    <div class="main__header">
+      <h1 class="main__title">Вы вышли из системы. Ждём вас снова!</h1>
+    </div>
+  </main>
+
+{% endblock %}
