--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,25 +4,35 @@
 
 {% block title %} Войти на сайт {% endblock %}
 
+{% block styles %}
+  <link rel="stylesheet" href={% static 'pages/form.css' %}>
+{% endblock %}
+
 {% block content %}
   <main class="main container">
     <div class="main__header">
       <h1 class="main__title">Войти на сайт</h1>
     </div>
     <div class="form-container">
-      <form class="form">
+      <form class="form" method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <input type="hidden" name="next" value="{{ next }}">
         <div class="form__group">
-          <label for="id_username" class="form__label">Имя</label>
+          <label for={{ form.username.id_for_label }} class="form__label">Имя</label>
           <div class="form__field-group">
             <input type="text" name="username" id="id_username" class="form__input">
             <span class="form__error"></span>
           </div>
         </div>
         <div class="form__group">
-          <label for="id_password" class="form__label">Пароль</label>
+          <label for={{ form.password.id_for_label }} class="form__label">Пароль</label>
           <div class="form__field-group">
             <input type="password" name="password" id="id_password" class="form__input">
-            <span class="form__error">Имя пользователя и пароль не совпадают. Введите правильные данные.</span>
+            {% if form.errors %}
+              <span class="form__error">
+                Имя пользователя и пароль не совпадают. Введите правильные данные.
+              </span>
+            {% endif %}
           </div>
         </div>
         <div class="form__footer">
