--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -21,7 +21,7 @@
           Старый пароль
         </label>
         <div class="form__field-group">
-          <input type="text" name="old_password" id="id_oldPassword" class="form__input">
+          <input type="password" name="old_password" id="id_oldPassword" class="form__input">
           <span class="form__error"></span>
         </div>
       </div>
@@ -30,7 +30,7 @@
           Новый пароль
         </label>
         <div class="form__field-group">
-          <input type="password" name="new_password" id="id_newPassword" class="form__input">
+          <input type="password" name={{ form.new_password1.id_for_label }} id="id_newPassword" class="form__input">
           <span class="form__input-info">
             Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.
           </span>
@@ -51,12 +51,12 @@
           Подтверждение нового пароля
         </label>
         <div class="form__field-group">
-          <input type="password" name="confirm_password" id="id_confirmPassword" class="form__input">
+          <input type="password" name={{ form.new_password2.id_for_label }} id="id_confirmPassword" class="form__input">
           <span class="form__error"></span>
         </div>
       </div>
       <div class="form__footer">
-        <button class="button button_style_blue">
+        <button type="submit" class="button button_style_blue">
           Изменить пароль
         </button>
       </div>
