--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -22,7 +22,9 @@
         </label>
         <div class="form__field-group">
           <input type="password" name="old_password" id="id_oldPassword" class="form__input">
-          <span class="form__error"></span>
+          {% if form.old_password.errors %}
+            <span class="form__error">{{ form.old_password.errors }}</span>
+          {% endif %}
         </div>
       </div>
       <div class="form__group">
@@ -30,7 +32,7 @@
           Новый пароль
         </label>
         <div class="form__field-group">
-          <input type="password" name={{ form.new_password1.id_for_label }} id="id_newPassword" class="form__input">
+          <input type="password" name="new_password1" id="id_newPassword" class="form__input">
           <span class="form__input-info">
             Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.
           </span>
@@ -43,7 +45,9 @@
           <span class="form__input-info">
             Ваш пароль не может состоять только из цифр.
           </span>
-          <span class="form__error"></span>
+          {% if form.new_password1.errors %}
+            <span class="form__error">{{ form.new_password1.errors }}</span>
+          {% endif %}
         </div>
       </div>
       <div class="form__group">
@@ -51,8 +55,10 @@
           Подтверждение нового пароля
         </label>
         <div class="form__field-group">
-          <input type="password" name={{ form.new_password2.id_for_label }} id="id_confirmPassword" class="form__input">
-          <span class="form__error"></span>
+          <input type="password" name="new_password2" id="id_confirmPassword" class="form__input">
+          {% if form.new_password2.errors %}
+            <span class="form__error">{{ form.new_password2.errors }}</span>
+          {% endif %}
         </div>
       </div>
       <div class="form__footer">
