--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -25,8 +25,21 @@
   <div class="card-list">
 
     {% for recipe in page %}
-      {% include "recipes/recipe.html" with recipe=recipe %}
+      {% include "recipes/recipe_index_card.html" with recipe=recipe %}
     {% endfor %}
 
   </div>
+
+  {% if page.has_other_pages %}
+    {% include "paginator.html" with page=page paginator=paginator %}
+  {% endif %}
+
 {% endblock %}
+
+{% block scripts %}
+  {% if request.user.is_authenticated %}
+    <script src={% static 'js/indexAuth.js' %}></script>
+  {% else %}
+    <script src={% static 'js/indexNotAuth.js' %}></script>
+  {% endif %}
+{% endblock%}
