Makes migrations for Follows model

--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %} Рецепты {% endblock %}
+{% block title %} Избранное {% endblock %}
 
 {% block content %}
   <div class="main__header">
