--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
 
     <script src={% static 'js/components/MainCards.js' %}></script>
     <script src={% static 'js/components/Purchases.js' %}></script>
+    {% if user.is_authenticated %}
+      <script src={% static 'js/components/Favorites.js' %}></script>
+    {% endif %}
     <script src={% static 'js/config/config.js' %}></script>
     <script src={% static 'js/components/CardList.js' %}></script>
     <script src={% static 'js/components/Header.js' %}></script>
