--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="card" data-id="120">
+<div class="card" data-id={{ recipe.id }}>
   <a href="#" class="link" target="_blank">
     <img src={{ recipe.image.url }} alt="{{ recipe.title }}" class="card__image">
   </a>
