--- a/templates/header.html
+++ b/templates/header.html
@@ -22,7 +22,11 @@
         {% url 'shop_list' as url %}
         <li class="nav__item {% if request.path == url %}nav__item_active{% endif %}">
           <a href={{ url }} class="nav__link link">Список покупок</a>
-          <span class="badge badge_style_blue nav__badge" id="counter">4</span>
+          {% if user.recipes_to_shopping.count %}
+            <span class="badge badge_style_blue nav__badge" id="counter">
+              {{ user.recipes_to_shopping.count }}
+            </span>
+          {% endif %}
         </li>
       </ul>
       {% if user.is_authenticated %}
