--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -9,21 +9,25 @@
       {{ recipe.title }}
     </a>
     <ul class="card__items">
-      {% if recipe.is_breakfast %}
-        <li class="card__item">
-          <span class="badge badge_style_green">Завтрак</span>
-        </li>
-      {% endif %}
-      {% if recipe.is_lunch %}
-        <li class="card__item">
-          <span class="badge badge_style_orange">Обед</span>
-        </li>
-      {% endif %}
-      {% if recipe.is_dinner %}
-        <li class="card__item">
-          <span class="badge badge_style_purple">Ужин</span>
-        </li>
-      {% endif %}
+
+      {% for tag in recipe.tags.all %}
+        {% ifequal 'breakfast' tag.name %}
+          <li class="card__item">
+            <span class="badge badge_style_green">Завтрак</span>
+          </li>
+        {% endifequal %}
+        {% ifequal 'lunch' tag.name %}
+          <li class="card__item">
+            <span class="badge badge_style_orange">Обед</span>
+          </li>
+        {% endifequal %}
+        {% ifequal 'dinner' tag.name %}
+          <li class="card__item">
+            <span class="badge badge_style_purple">Ужин</span>
+          </li>
+        {% endifequal %}
+      {% endfor %}
+
     </ul>
     <div class="card__items card__items_column">
       <p class="card__text">
