--- a/recipes/templates/recipes/shop_list.html
+++ b/recipes/templates/recipes/shop_list.html
@@ -29,8 +29,12 @@
       {% endfor %}
 
     </ul>
-    <a href="#">
-      <button class="button button_style_blue">Скачать список</button>
-    </a>
+    {% if shop_list %}
+      <a href="#">
+        <button class="button button_style_blue">
+          Скачать список
+        </button>
+      </a>
+    {% endif %}
   </div>
 {% endblock %}
