--- a/recipes/templates/recipes/recipe_card.html
+++ b/recipes/templates/recipes/recipe_card.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% load recipe_filters %}
 
 {% block title %}{{ recipe.title }}{% endblock %}
 
@@ -10,11 +11,11 @@
 
 
 {% block content %}
-  <div class="single-card" data-id="371" data-author="12">
-    <img src="./images/testCardImg.png" alt="какой-то текст" class="single-card__image">
+  <div class="single-card" data-id={{ recipe.id }} data-author={{ recipe.author.id }}>
+    <img src="{{ recipe.image.url }}" alt={{ recipe.title }} class="single-card__image">
     <div class="single-card__info">
       <div class="single-card__header-info">
-        <h1 class="single-card__title">Французские тосты</h1>
+        <h1 class="single-card__title">{{ recipe.title }}</h1>
         <div class="single-card__favorite">
           <button class="button button_style_none" name="favorites" data-out>
             <span class="icon-favorite icon-favorite_big"></span>
@@ -25,26 +26,42 @@
         </div>
       </div>
       <ul class="single-card__items">
-        <li class="single-card__item">
-          <span class="badge badge_style_green">Обед</span>
-        </li>
-        <li class="single-card__item">
-          <span class="badge badge_style_orange">Завтрак</span>
-        </li>
-        <li class="single-card__item">
-          <span class="badge badge_style_purple">Ужин</span>
-        </li>
+
+        {% for tag in recipe.tags.all %}
+          {% ifequal 'breakfast' tag.name %}
+            <li class="card__item">
+              <span class="badge badge_style_green">Завтрак</span>
+            </li>
+          {% endifequal %}
+          {% ifequal 'lunch' tag.name %}
+            <li class="card__item">
+              <span class="badge badge_style_orange">Обед</span>
+            </li>
+          {% endifequal %}
+          {% ifequal 'dinner' tag.name %}
+            <li class="card__item">
+              <span class="badge badge_style_purple">Ужин</span>
+            </li>
+          {% endifequal %}
+        {% endfor %}
+
       </ul>
       <div class="single-card__items single-card__items_column">
-        <p class="single-card__text"><span class="icon-time"></span> 20 мин.</p>
+        <p class="single-card__text">
+          <span class="icon-time"></span> {{ recipe.cooking_time }} мин.
+        </p>
         <ul class="single-card__items">
-          <li class="single-card__item"><p class="single-card__text">
-            <span class="icon-user"></span> Вероника Чернова</p>
+          <li class="single-card__item">
+            <p class="single-card__text">
+              <span class="icon-user"></span> {{ recipe.author.get_full_name }}
+            </p>
           </li>
           <li class="single-card__item">
-            <a style="margin-left: 2.5em" href="#" class="single-card__text">
-              Редактировать рецепт
-            </a>
+            {% ifequal request.user recipe.author %}
+              <a style="margin-left: 2.5em" href="#" class="single-card__text">
+                Редактировать рецепт
+              </a>
+            {% endifequal %}
           </li>
         </ul>
       </div>
@@ -63,23 +80,18 @@
       <div class="single-card__section">
         <h3 class="single-card__section-title">Ингридиенты:</h3>
         <div class="single-card__items single-card__items_column">
-          <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-          <p class=" single-card__section-item">Молоко - 200 мл.</p>
-          <p class=" single-card__section-item">Тосты - 4 шт.</p>
-          <p class=" single-card__section-item">Сахар 2 сл.л.</p>
-          <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-          <p class=" single-card__section-item">Молоко - 200 мл.</p>
+
+          {% for recipe_ingredient in recipe.recipe_ingredients.all %}
+            <p class=" single-card__section-item">
+              {{ recipe_ingredient.ingredient.title }} - {{ recipe_ingredient.amount }} {{ recipe_ingredient.ingredient.dimension }}
+            </p>
+          {% endfor %}
+
         </div>
       </div>
       <div class="single-card__section">
         <h3 class="single-card__section-title">Описание:</h3>
-        <p class=" single-card__section-text">
-          Смешать молоко с сахаром, добавить яйца, тщательно все взбить.
-          Обмакнуть тосты в смесь и жарить на сливочном масле до золотистой корочки.
-        </p>
-        <p class=" single-card__section-text">
-          Полить сверху сиропом топинамбура и украсить ягодами.
-        </p>
+        {{ recipe.description|make_paragraphs|safe }}
       </div>
     </div>
   </div>
