--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -1,11 +1,11 @@
 {% load static %}
 
 <div class="card" data-id={{ recipe.id }}>
-  <a href="#" class="link" target="_blank">
+  <a href={{ recipe.get_absolute_url }} class="link" target="_blank">
     <img src={{ recipe.image.url }} alt="{{ recipe.title }}" class="card__image">
   </a>
   <div class="card__body">
-    <a class="card__title link" href="#" target="_blank">
+    <a class="card__title link" href={{ recipe.get_absolute_url }} target="_blank">
       {{ recipe.title }}
     </a>
     <ul class="card__items">
