--- a/recipes/templates/recipes/tags.html
+++ b/recipes/templates/recipes/tags.html
@@ -1,14 +1,15 @@
+{% load recipe_filters %}
 <ul class="tags">
   <li class="tags__item">
-    <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange{% if 'breakfast' in tags %} tags__checkbox_active{% endif %}" href="?tags={% if 'breakfast' in tags %}lunch,dinner{% else %}breakfast,lunch,dinner{% endif %}"></a>
+    <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange{% if 'breakfast' in tags %} tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|make_url:'breakfast' }}"></a>
     <span class="tags__label">Завтрак</span>
   </li>
   <li class="tags__item">
-    <a id="lunch" class="tags__checkbox tags__checkbox_style_green{% if 'lunch' in tags %} tags__checkbox_active{% endif %}" href="#"></a>
+    <a id="lunch" class="tags__checkbox tags__checkbox_style_green{% if 'lunch' in tags %} tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|make_url:'lunch' }}"></a>
     <span for="lunch" class="tags__label">Обед</span>
   </li>
   <li class="tags__item">
-    <a id="dinner" class="tags__checkbox tags__checkbox_style_purple{% if 'dinner' in tags %} tags__checkbox_active{% endif %}" href="#"></a>
+    <a id="dinner" class="tags__checkbox tags__checkbox_style_purple{% if 'dinner' in tags %} tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|make_url:'dinner' }}"></a>
     <label for="dinner" class="tags__label">Ужин</label>
   </li>
 </ul>
