--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load recipe_filters %}
 
 <div class="card" data-id={{ recipe.id }}>
   <a href={{ recipe.get_absolute_url }} class="link" target="_blank">
@@ -43,13 +44,14 @@
   <div class="card__footer">
 
     <button class="button button_style_light-blue" name="purchases" data-out>
-      <span class="icon-plus button__icon"></span>
-      Добавить в покупки
+      {% csrf_token %}
+      <span class="icon-plus button__icon"></span>Добавить в покупки
     </button>
     {% if user.is_authenticated %}
-      <button class="button button_style_none" name="favorites" data-out>
-        <span class="icon-favorite"></span>
+      <button class="button button_style_none" name="favorites"{% if not request.user|is_favorite:recipe %} data-out{% endif %}>
+        <span class="icon-favorite{% if request.user|is_favorite:recipe %} icon-favorite_active{% endif %}"></span>
       </button>
     {% endif %}
+
   </div>
 </div>
