--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -49,6 +49,7 @@
     </button>
     {% if user.is_authenticated %}
       <button class="button button_style_none" name="favorites"{% if not request.user|is_favorite:recipe %} data-out{% endif %}>
+        {% csrf_token %}
         <span class="icon-favorite{% if request.user|is_favorite:recipe %} icon-favorite_active{% endif %}"></span>
       </button>
     {% endif %}
