--- a/recipes/templates/recipes/followings.html
+++ b/recipes/templates/recipes/followings.html
@@ -5,7 +5,7 @@
 {% block title %} Мои подписки {% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href={% static 'pages/myFollow.css' %}>
+  <link rel="stylesheet" href={% static 'recipes/pages/myFollow.css' %}>
 {% endblock %}
 
 {% block content %}
@@ -128,5 +128,5 @@
 {% endblock %}
 
 {% block scripts %}
-  <script src={% static 'js/components/MyFollow.js' %}></script>
+  <script src={% static 'recipes/js/components/MyFollow.js' %}></script>
 {% endblock%}
