--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -27,8 +27,8 @@
 
 {% block scripts %}
   {% if request.user.is_authenticated %}
-    <script src={% static 'js/indexAuth.js' %}></script>
+    <script src={% static 'recipes/js/indexAuth.js' %}></script>
   {% else %}
-    <script src={% static 'js/indexNotAuth.js' %}></script>
+    <script src={% static 'recipes/js/indexNotAuth.js' %}></script>
   {% endif %}
 {% endblock%}
