--- a/templates/header.html
+++ b/templates/header.html
@@ -22,11 +22,13 @@
         {% url 'shop_list' as url %}
         <li class="nav__item {% if request.path == url %}nav__item_active{% endif %}">
           <a href={{ url }} class="nav__link link">Список покупок</a>
-          {% if user.recipes_to_shopping.count %}
             <span class="badge badge_style_blue nav__badge" id="counter">
-              {{ user.recipes_to_shopping.count }}
+              {% if user.recipes_to_shopping.count %}
+                {{ user.recipes_to_shopping.count }}
+              {% else %}
+              0
+              {% endif %}
             </span>
-          {% endif %}
         </li>
       </ul>
       {% if user.is_authenticated %}
