Reviewed JS scripts defenitions

--- a/recipes/templates/recipes/followings.html
+++ b/recipes/templates/recipes/followings.html
@@ -56,5 +56,13 @@
 {% endblock %}
 
 {% block scripts %}
+
+  <script src={% static 'recipes/js/config/config.js' %}></script>
+  <script src={% static 'recipes/js/components/MainCards.js' %}></script>
   <script src={% static 'recipes/js/components/MyFollow.js' %}></script>
+  <script src={% static 'recipes/js/components/Subscribe.js' %}></script>
+  <script src={% static 'recipes/js/components/Header.js' %}></script>
+  <script src={% static 'recipes/js/api/Api.js' %}></script>
+  <script src={% static 'recipes/js/myFollow.js' %}></script>
+
 {% endblock%}
