--- a/recipes/templates/recipes/new_recipe.html
+++ b/recipes/templates/recipes/new_recipe.html
@@ -95,6 +95,11 @@
 {% endblock %}
 
 {% block scripts %}
-  <script src={% static 'js/utils/debouncing.js' %}></script>
+
+  <script src={% static 'recipes/js/config/config.js' %}></script>
+  <script src={% static 'recipes/js/components/Header.js' %}></script>
+  <script src={% static 'recipes/js/utils/debouncing.js' %}></script>
+  <script src={% static 'recipes/js/api/Api.js' %}></script>
   <script src={% static 'js/formRecipe.js' %}></script>
+
 {% endblock %}
