--- a/recipes/templates/recipes/shop_list.html
+++ b/recipes/templates/recipes/shop_list.html
@@ -41,6 +41,11 @@
 {% endblock %}
 
 {% block scripts %}
+
+  <script src={% static 'recipes/js/config/config.js' %}></script>
+  <script src={% static 'recipes/js/components/Header.js' %}></script>
   <script src={% static 'recipes/js/components/ShopList.js' %}></script>
+  <script src={% static 'recipes/js/api/Api.js' %}></script>
   <script src={% static 'recipes/shopList.js' %}></script>
+
 {% endblock%}
