--- a/recipes/templates/recipes/favorites.html
+++ b/recipes/templates/recipes/favorites.html
@@ -37,6 +37,14 @@
 {% endblock %}
 
 {% block scripts %}
+
+  <script src={% static 'recipes/js/components/MainCards.js' %}></script>
+  <script src={% static 'recipes/js/components/Purchases.js' %}></script>
+  <script src={% static 'recipes/js/components/Favorites.js' %}></script>
+  <script src={% static 'recipes/js/config/config.js' %}></script>
+  <script src={% static 'recipes/js/components/CardList.js' %}></script>
+  <script src={% static 'recipes/js/components/Header.js' %}></script>
+  <script src={% static 'recipes/js/api/Api.js' %}></script>
   <script src={% static 'recipes/js/favorite.js' %}></script>
 
 {% endblock%}
