--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -26,7 +26,15 @@
 {% endblock %}
 
 {% block scripts %}
+  <script src={% static 'recipes/js/components/MainCards.js' %}></script>
+  <script src={% static 'recipes/js/components/Purchases.js' %}></script>
+  <script src={% static 'recipes/js/config/config.js' %}></script>
+  <script src={% static 'recipes/js/components/CardList.js' %}></script>
+  <script src={% static 'recipes/js/components/Header.js' %}></script>
+  <script src={% static 'recipes/js/api/Api.js' %}></script>
+
   {% if request.user.is_authenticated %}
+    <script src={% static 'recipes/js/components/Favorites.js' %}></script>
     <script src={% static 'recipes/js/indexAuth.js' %}></script>
   {% else %}
     <script src={% static 'recipes/js/indexNotAuth.js' %}></script>
