--- a/recipes/templates/recipes/recipe_index_card.html
+++ b/recipes/templates/recipes/recipe_index_card.html
@@ -35,14 +35,13 @@
         <span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
       <p class="card__text">
         <span class="icon-user"></span>
-        <a href="#" style="color: black">
+        <a href={% url 'author_recipes' author_id=recipe.author.id %} style="color: black">
           {{ recipe.author.get_full_name }}
         </a>
       </p>
     </div>
   </div>
   <div class="card__footer">
-    {% csrf_token %}
     {% if user.is_authenticated %}
       {% if not request.user|is_in_shopping_list:recipe %}
         <button class="button button_style_light-blue" name="purchases" data-out>
