--- a/recipes/templates/recipes/recipes.html
+++ b/recipes/templates/recipes/recipes.html
@@ -5,12 +5,24 @@
 {% block title %} Избранное {% endblock %}
 
 {% block content %}
+  {% csrf_token %}
   <div class="main__header">
-    <h1 class="main__title">Рецепты</h1>
+    <h1 class="main__title">{% if author %}{{ author.get_full_name }}{% else %}Рецепты{% endif %}</h1>
 
     {% include "recipes/tags.html" with tags=tags %}
 
   </div>
+
+  {% if author %}
+    <div class="author-subscribe" data-author={{ author.id }}>
+      <p style="padding: 0 0 2em 0;">
+        <button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>
+          Подписаться на автора
+        </button>
+      </p>
+    </div>
+  {% endif %}
+
   <div class="card-list">
 
     {% for recipe in page %}
@@ -26,17 +38,31 @@
 {% endblock %}
 
 {% block scripts %}
-  <script src={% static 'recipes/js/components/MainCards.js' %}></script>
-  <script src={% static 'recipes/js/components/Purchases.js' %}></script>
-  <script src={% static 'recipes/js/config/config.js' %}></script>
-  <script src={% static 'recipes/js/components/CardList.js' %}></script>
-  <script src={% static 'recipes/js/components/Header.js' %}></script>
-  <script src={% static 'recipes/js/api/Api.js' %}></script>
-
-  {% if request.user.is_authenticated %}
+  {% if author %}
+    <script src={% static 'recipes/js/components/MainCards.js' %}></script>
+    <script src={% static 'recipes/js/components/Purchases.js' %}></script>
     <script src={% static 'recipes/js/components/Favorites.js' %}></script>
-    <script src={% static 'recipes/js/indexAuth.js' %}></script>
+    <script src={% static 'recipes/js/components/Subscribe.js' %}></script>
+    <script src={% static 'recipes/js/config/config.js' %}></script>
+    <script src={% static 'recipes/js/components/AuthorRecipe.js' %}></script>
+    <script src={% static 'recipes/js/components/Header.js' %}></script>
+    <script src={% static 'recipes/js/api/Api.js' %}></script>
+    <script src={% static 'recipes/js/authorRecipe.js' %}></script>
   {% else %}
-    <script src={% static 'recipes/js/indexNotAuth.js' %}></script>
+    <script src={% static 'recipes/js/components/MainCards.js' %}></script>
+    <script src={% static 'recipes/js/components/Purchases.js' %}></script>
+    <script src={% static 'recipes/js/config/config.js' %}></script>
+    <script src={% static 'recipes/js/components/CardList.js' %}></script>
+    <script src={% static 'recipes/js/components/Header.js' %}></script>
+    <script src={% static 'recipes/js/api/Api.js' %}></script>
+
+    {% if request.user.is_authenticated %}
+      <script src={% static 'recipes/js/components/Favorites.js' %}></script>
+      <script src={% static 'recipes/js/indexAuth.js' %}></script>
+    {% else %}
+      <script src={% static 'recipes/js/indexNotAuth.js' %}></script>
+    {% endif %}
+
   {% endif %}
+
 {% endblock%}
