--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,10 +3,10 @@
     <a href="/" class="footer__brand link">Продуктовый помощник</a>
     <ul class="footer__items">
       <li class="footer__item">
-        <a href="#" class="footer__link link">Об авторе </a>
+        <a href={% url 'about_author' %} class="footer__link link">Об авторе </a>
       </li>
       <li class="footer__item">
-        <a href="#" class="footer__link link">Технологии</a>
+        <a href={% url 'about_technologies' %} class="footer__link link">Технологии</a>
       </li>
     </ul>
   </div>
