--- a/recipes/templates/recipes/shop_list.html
+++ b/recipes/templates/recipes/shop_list.html
@@ -30,7 +30,7 @@
 
     </ul>
     {% if shop_list %}
-      <a href="#">
+      <a href={% url 'pdf_shop_list' %}>
         <button class="button button_style_blue">
           Скачать список
         </button>
