--- a/recipes/templates/recipes/new_recipe.html
+++ b/recipes/templates/recipes/new_recipe.html
@@ -16,10 +16,6 @@
   <div class="form-container">
     <form class="form" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-
-      {{ form }}
-
-
       <div class="form__group">
         <label for="id_name" class="form__label">Название рецепта</label>
         <div class="form__field-group">
@@ -32,7 +28,7 @@
         <div class="form__field-group">
           <div class="tags">
             <div class="tags__item">
-              <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
+              <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange" checked>
               <label for="id_breakfast" class="tags__label">Завтрак</label>
             </div>
             <div class="tags__item">
