--- a/recipes/templates/recipes/shop_list.html
+++ b/recipes/templates/recipes/shop_list.html
@@ -46,6 +46,6 @@
   <script src={% static 'recipes/js/components/Header.js' %}></script>
   <script src={% static 'recipes/js/components/ShopList.js' %}></script>
   <script src={% static 'recipes/js/api/Api.js' %}></script>
-  <script src={% static 'recipes/shopList.js' %}></script>
+  <script src={% static 'recipes/js/shopList.js' %}></script>
 
 {% endblock%}
