--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -1,12 +1,18 @@
-{% load staticfiles %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% load static %}
 
-</body>
-</html>
+{% block title %}Изменить пароль{% endblock %}
+
+{% block styles %}
+  <link rel="stylesheet" href={% static 'pages/form.css' %}>
+{% endblock %}
+
+{% block content %}
+
+  <div class="main__header">
+    <h1 class="main__title">Сброс пароля</h1>
+    <p>Информация о сбросе пароля направлена на ваш электронный ящик.</p>
+  </div>
+
+{% endblock %}
