Makes password reset functional

--- a/users/templates/registration/password_reset_complete.html
+++ b/users/templates/registration/password_reset_complete.html
@@ -15,10 +15,12 @@
   </div>
   <div class="custom-center-block">
     <p class="custom-text-block">
-      Информация о сбросе пароля направлена на ваш электронный ящик.
+      Ваш пароль был сохранен. Теперь вы можете войти.
     </p>
     <div class="custom-button-block">
-      <a href="/" class="button button_style_blue">Перейти на главную</a>
+      <a href={% url 'login' %} class="button button_style_blue">
+        Войти
+      </a>
     </div>
   </div>
 
