--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,12 +1,61 @@
-{% load staticfiles %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% load static %}
 
-</body>
-</html>
+{% block title %}Изменить пароль{% endblock %}
+
+{% block styles %}
+  <link rel="stylesheet" href={% static 'pages/form.css' %}>
+{% endblock %}
+
+{% block content %}
+
+  <div class="main__header">
+    <h1 class="main__title">Сброс пароля</h1>
+  </div>
+  <div class="form-container">
+    <form class="form" method="post">
+      {% csrf_token %}
+      <div class="form__group">
+        <label for={{ form.new_password1.id_for_label }} class="form__label">
+          Новый пароль
+        </label>
+        <div class="form__field-group">
+          <input type="password" name="new_password1" id="id_newPassword" class="form__input">
+          <span class="form__input-info">
+            Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.
+          </span>
+          <span class="form__input-info">
+            Ваш пароль должен содержать как минимум 8 символов.
+          </span>
+          <span class="form__input-info">
+            Ваш пароль не может быть одним из широко распространённых паролей.
+          </span>
+          <span class="form__input-info">
+            Ваш пароль не может состоять только из цифр.
+          </span>
+          {% if form.new_password1.errors %}
+            <span class="form__error">{{ form.new_password1.errors }}</span>
+          {% endif %}
+        </div>
+      </div>
+      <div class="form__group">
+        <label for={{ form.new_password2.id_for_label }} class="form__label">
+          Подтверждение нового пароля
+        </label>
+        <div class="form__field-group">
+          <input type="password" name="new_password2" id="id_confirmPassword" class="form__input">
+          {% if form.new_password2.errors %}
+            <span class="form__error">{{ form.new_password2.errors }}</span>
+          {% endif %}
+        </div>
+      </div>
+      <div class="form__footer">
+        <button type="submit" class="button button_style_blue">
+          Изменить пароль
+        </button>
+      </div>
+    </form>
+  </div>
+
+{% endblock %}
