--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -14,7 +14,7 @@
     <h1 class="main__title">Сброс пароля</h1>
   </div>
   <div class="form-container">
-    <form class="form">
+    <form class="form" method="post">
       {% csrf_token %}
       <p class="form__info-text">
         Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались.
@@ -24,7 +24,7 @@
           Адрес электронной почты
         </label>
         <div class="form__field-group">
-          <input type="email" name="email" id="id_email" class="form__input">
+          <input type="email" name="email" autocomplete="email" id="id_email" class="form__input" id="id_email">
           <span class="form__error"></span>
         </div>
       </div>
